# dodo-payments

./: .dockerignore  .gitignore  API.md  API_DOCUMENTATION.md  COMPILE_TIME_MACROS.md  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  DOCKER_FIXES_SUMMARY.md  Dockerfile  Dockerfile.simple  Dockerfile.test  FIXED_README.md  PRODUCTION.md  README.md  REQUIREMENTS_COMPLIANCE.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  backup-db.sh  build-and-run-docker.bat  build-and-run-docker.sh  build-with-compile-time-macros.bat  build-with-compile-time-macros.sh  capture-docker-logs.bat  capture-docker-logs.sh  cleanup.sh  debug_token.sh  digest.txt  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  health-check.sh  init-db.sh  prepare-sqlx-data.sh  profile_response.json  rebuild-docker-fresh.bat  rebuild-docker-fresh.sh  rebuild-docker.bat  rebuild-docker.sh  (+24 more)
.sqlx/: query-08563a6ed2a6aac029f36bb0f45af2685791ca1fc776155b4404238596cafc64.json  query-278bfb374547853967bd3fd2f542ad6b8145131bb313aad76ca97805547c512d.json  query-289325788a599681bd536052ec4aedd9e7b5394f5c8b8e983bc1d054c4003148.json  query-40a586108ede060a63b4552e068fa5e6a754c6aa5da33b0cacd9b6453bdbbb24.json  query-61662913b972193e7b8d0ea6c0e511b1c5ecc4fac6cf7e4ab79330b10d3bea4c.json  query-6bfb2ecf122bbd464809e5d9832f327138e8c0da9fce0bcb6c2dad76f9cb8e0a.json  query-6c315c3628814c58ca7d9cd47f4a3d53746caf532a6f09874522b26ee3251658.json  query-75fd8e3261e08047c1d0563b3267cba53f86943c832c82b35347a586075875d9.json  query-7db04a2c39423562529b971fe6ad8f9ba8c38750ee0b6c86add8465931ca94e2.json  sqlx-data.json  (+5 more)
(+73 files in other folders)
