[package]
name = "dodo-payments"
version = "1.0.0"
edition = "2021"
authors = ["Dodo Payments Team"]
description = "A Rust-based backend service for managing transactions and user accounts"
repository = ""
license = "MIT"
readme = "README.md"

[dependencies]
# Web framework
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-http = "3.3.1"

# Database
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "bigdecimal", "migrate", "offline"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
# Better decimal handling
rust_decimal = { version = "1.30", features = ["serde"] }

# Serialization/Deserialization
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

# Authentication and Security
jsonwebtoken = "8.3.0"
argon2 = "0.5.0"
rand = "0.8.5"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.19"
env_logger = "0.10.0"
validator = { version = "0.16.1", features = ["derive"] }
futures = "0.3.28"

# Rate limiting
actix-extensible-rate-limit = "0.2.1"
# Bytes for working with byte arrays
bytes = "1.4.0"

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
